Added Product image and carousel
