# server/src/staticFiles/dto/staticFiles.dto.ts
@@ -1,5 +1,6 @@
 export class CreateStaticFileDto {
   readonly name?: string;
+  readonly fileType?: string;
   readonly productId?: string;
   readonly userId?: string;
 }
